update: add short biography in left column

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "avatar.png"
   name             : "Liu Yuxuan (刘宇轩)"
   pronouns         : "him" # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "2nd-Year Ph.D in Computer Science"
   location         : "Shenzhen, Guangdong, China"
   employer         : "The Chinese University of Hong Kong, Shenzhen"
   uri              : # URL
